add flake heading and block

--- a/README.org
+++ b/README.org
@@ -150,3 +150,52 @@ a work in progress! not a good idea to install right now!
 
 }
 #+end_src
+* flake
+#+begin_src nix :tangle ./flake.nix
+{
+  description = "chunixos";
+
+  inputs = {
+
+    # nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
+    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
+    nixpkgs-unstable.url = "nixpkgs/nixos-unstable";
+
+    home-manager = {
+      url = "github:nix-community/home-manager/master";
+      inputs.nixpkgs.follows = "nixpkgs";
+    };
+
+    emacs-overlay = {
+    url = "github:nix-community/emacs-overlay";
+    inputs = {
+      nixpkgs.follows = "nixpkgs-unstable";
+      nixpkgs-stable.follows = "nixpkgs";
+      };
+    };
+    nixos-hardware.url = "github:nixos/nixos-hardware";
+
+  };
+
+  outputs = { self, nixpkgs, home-manager, ... }:
+    let
+      lib = nixpkgs.lib;
+      system = "x86_64-linux";
+      pkgs = nixpkgs.legacyPackages.${system};
+    in {
+      nixosConfigurations = {
+        nixos = lib.nixosSystem { # change "nixos" to your username
+          inherit system;
+          modules = [ ./configuration.nix ];
+        };
+      };
+      homeConfigurations = {
+        chu = home-manager.lib.homeManagerConfiguration {
+          inherit pkgs;
+          modules = [ ./home.nix ];
+        };
+      };
+    };
+
+}
+#+end_src
