--- a/README.org
+++ b/README.org
@@ -6,33 +6,33 @@ a work in progress! not a good idea to install right now!
 
 * installation
 
-1. Acquire or build a NixOS 24.05+ image:
++ Acquire or build a NixOS 24.05+ image:
 
 #+begin_src shell
 # Yoink nixos-unstable from upstream
 wget -O nixos.iso https://channels.nixos.org/nixos-unstable/latest-nixos-minimal-x86_64-linux.iso
 #+end_src
 
-2. Write it to a USB drive:
++ Write it to a USB drive:
 
 #+begin_src shell
 # Replace /dev/sdX with the correct partition!
 cp nixos.iso /dev/sdX
 #+end_src
 
-3. Restart and boot into the installer.
++ Restart and boot into the installer.
 
-4. Do your partitions and mount your root to =/mnt=  ([[https://github.com/hlissner/dotfiles/blob/master/hosts/udon/README.org][for example]]).
++ Do your partitions and mount your root to =/mnt=  ([[https://github.com/hlissner/dotfiles/blob/master/hosts/udon/README.org][for example]]).
 
-5. Clone these dotfiles somewhere:
++ Clone these dotfiles somewhere:
 
 #+begin_src shell
 git clone --recursive https://github.com/chumutt/dogfiles
 #+end_src
 
-6. Create a host config in =hosts/= (see [[https://github.com/hlissner/dotfiles/blob/master/hosts][existing ones]] for examples).
++ Create a host config in =hosts/= (see [[https://github.com/hlissner/dotfiles/blob/master/hosts][existing ones]] for examples).
 
-7. Run the installer:
++ Run the installer:
 
 #+begin_src shell
 # The options are optional, but these are their default values, if you omit them.
@@ -44,13 +44,11 @@ $ dotfiles/install.zsh \
       --dest /mnt/home/$USER/.config/dogfiles
 #+end_src
 
-8. Then reboot and you're good to go!
++ Then reboot and you're good to go!
 
-#+begin_src markdown
 > [!WARNING]
 > Don't forget to change your `root` and `$USER` passwords! They are set to
 > `nixos` by default.
-#+end_src
 
 
 * configuration
