--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 #+description: nixos dotfiles
 #+author: chu
 
-a work in progress! not a good idea to install right now!
+work in progress! not a good idea to install right now!
 
 * installation
 
