--- a/README.org
+++ b/README.org
@@ -22,18 +22,19 @@ work in progress! ⚠✨not a good idea to install right now!✨⚠
 
 - [[https://github.com/hlissner/dotfiles/commits?author=hlissner][hlissner/dotfiles]]
 - [[https://github.com/idlip/d-nix][idlip/d-nix]]
+
 * installation
 
 + Acquire or build a NixOS 24.05+ image:
 
-#+begin_src shell :noeval t
+#+begin_src sh :noeval t
 # Yoink nixos-unstable from upstream
 wget -O nixos.iso https://channels.nixos.org/nixos-unstable/latest-nixos-minimal-x86_64-linux.iso
 #+end_src
 
 + Write it to a USB drive:
 
-#+begin_src shell :noeval t
+#+begin_src sh :noeval t
 # Replace /dev/sdX with the correct partition!
 cp nixos.iso /dev/sdX
 #+end_src
@@ -44,7 +45,7 @@ cp nixos.iso /dev/sdX
 
 + Clone these dotfiles somewhere:
 
-#+begin_src shell :noeval t
+#+begin_src sh :noeval t
 git clone --recursive https://github.com/chumutt/dogfiles
 #+end_src
 
@@ -52,7 +53,7 @@ git clone --recursive https://github.com/chumutt/dogfiles
 
 + Run the installer:
 
-#+begin_src shell :noeval t
+#+begin_src sh :noeval t
 # The options are optional, but these are their default values, if you omit them.
 dotfiles/install.zsh \
       --root /mnt \
@@ -73,7 +74,7 @@ dotfiles/install.zsh \
 Deploy and install this nixos system.
 
 #+name: installer
-#+begin_src shell :shebang #!/usr/bin/env zsh :tangle ./install.zsh :noeval t
+#+begin_src sh :shebang #!/usr/bin/env zsh :tangle ./install.zsh :noeval t
 zparseopts -E -F -D -- -flake=flake \
                        -user=user \
                        -host=host \
@@ -455,6 +456,6 @@ in {
 
 ** xinitrc
 
-#+begin_src shell :tangle ./x11/xinitrc :mkdirp yes
+#+begin_src sh :tangle ./x11/xinitrc :mkdirp yes
 dwm
 #+end_src
