--- a/README.org
+++ b/README.org
@@ -115,7 +115,36 @@ nixos-install \
 * hosts (profiles)
 ** chunix
 #+begin_src nix :tangle ./hosts/chunix/default.nix :mkdirp yes
+{ lib, ... };
 
+with lib;
+with bultins;
+{
+  system = "x86_64-linux";
+
+  modules = {
+    xdg.ssh.enable = true;
+
+    profiles = {
+      role = "workstation";
+      user = "chu";
+      networks=["us"];
+      hardware = [
+        "cpu/amd"
+        "gpu/amd"
+        "audio"
+        "audio/realtime"
+        "ssd"
+      ];
+    };
+    desktop = {
+      dwm.enable = true;
+      term.default = "st";
+      term.st.enable = true;
+      browsers.default = "librewolf";
+    };
+  };
+}
 #+end_src
 * configuration
 
