--- a/README.org
+++ b/README.org
@@ -112,40 +112,6 @@ nixos-install \
     --flake "${flake}#${host}"
 #+end_src
 
-* hosts (profiles)
-** chunix
-#+begin_src nix :tangle ./hosts/chunix/default.nix :mkdirp yes
-{ lib, ... };
-
-with lib;
-with bultins;
-{
-  system = "x86_64-linux";
-
-  modules = {
-    xdg.ssh.enable = true;
-
-    profiles = {
-      role = "workstation";
-      user = "chu";
-      networks=["us"];
-      hardware = [
-        "cpu/amd"
-        "gpu/amd"
-        "audio"
-        "audio/realtime"
-        "ssd"
-      ];
-    };
-    desktop = {
-      dwm.enable = true;
-      term.default = "st";
-      term.st.enable = true;
-      browsers.default = "librewolf";
-    };
-  };
-}
-#+end_src
 * configuration
 
 #+begin_src nix :tangle ./configuration.nix
@@ -336,7 +302,7 @@ with bultins;
   home = {
     username = "chu";
     homeDirectory = "/home/chu";
-    stateVersion = "24.05"; # Please read the comment before changing.
+    stateVersion = "24.05";
 
     packages = with pkgs; [
       cachix
@@ -429,6 +395,40 @@ with bultins;
 }
 #+end_src
 
+* TODO hosts (profiles)
+** TODO chunix
+#+begin_src nix :tangle ./hosts/chunix/default.nix :mkdirp yes
+{ lib, ... };
+
+with lib;
+with bultins;
+{
+  system = "x86_64-linux";
+
+  modules = {
+    xdg.ssh.enable = true;
+
+    profiles = {
+      role = "workstation";
+      user = "chu";
+      networks=["us"];
+      hardware = [
+        "cpu/amd"
+        "gpu/amd"
+        "audio"
+        "audio/realtime"
+        "ssd"
+      ];
+    };
+    desktop = {
+      dwm.enable = true;
+      term.default = "st";
+      term.st.enable = true;
+      browsers.default = "librewolf";
+    };
+  };
+}
+#+end_src
 * shells.nix
 
 #+begin_src nix :tangle ./shells.nix
