--- a/README.org
+++ b/README.org
@@ -247,18 +247,24 @@ nixos-install \
 
 #+begin_src nix :tangle ./flake.nix
 {
-  description = "chunixos";
+  description = "chunixOS";
 
   inputs = {
 
-    # nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
-    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
+    nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
     nixpkgs-unstable.url = "nixpkgs/nixos-unstable";
-
     home-manager = {
       url = "github:nix-community/home-manager/master";
       inputs.nixpkgs.follows = "nixpkgs";
     };
+    # TODO: Secrets mgmt.
+    # agenix = {
+    #   url = "github:ryantm/agenix";
+    #   inputs.nixpkgs.follows = "nixpkgs";
+    # };
+    # TODO: Declarative partitions
+    # disko.url = "github:nix-community/disko";
+    # disko.inputs.nixpkgs.follows = "nixpkgs";
 
     emacs-overlay = {
       url = "github:nix-community/emacs-overlay";
@@ -268,7 +274,6 @@ nixos-install \
       };
     };
     nixos-hardware.url = "github:nixos/nixos-hardware";
-
   };
 
   outputs = { self, nixpkgs, home-manager, ... }:
