pass flake inputs to external configs

--- a/README.org
+++ b/README.org
@@ -279,26 +279,50 @@ nixos-install \
     nixos-hardware.url = "github:nixos/nixos-hardware";
   };
 
-  outputs = { self, nixpkgs, home-manager, ... }:
+  # outputs = { self, nixpkgs, home-manager, ... }:
+  #   let
+  #     lib = nixpkgs.lib;
+  #     system = "x86_64-linux";
+  #     pkgs = nixpkgs.legacyPackages.${system};
+  #   in {
+  #     nixosConfigurations = {
+  #       nixos = lib.nixosSystem { # change "nixos" to your username
+  #         inherit system;
+  #         modules = [ ./configuration.nix ];
+  #       };
+  #     };
+  #     homeConfigurations = {
+  #       chu = home-manager.lib.homeManagerConfiguration {
+  #         inherit pkgs;
+  #         modules = [ ./home.nix ];
+  #       };
+  #     };
+  #   };
+# Pass flake inputs to external config files:
+  outputs = inputs@{ self, nixpkgs, nixos-hardware, ... }:
     let
-      lib = nixpkgs.lib;
-      system = "x86_64-linux";
-      pkgs = nixpkgs.legacyPackages.${system};
-    in {
-      nixosConfigurations = {
-        nixos = lib.nixosSystem { # change "nixos" to your username
-          inherit system;
-          modules = [ ./configuration.nix ];
-        };
+      args = {
+        inherit self;
+        inherit (nixpkgs) lib;
+        pkgs = import nixpkgs { };
       };
-      homeConfigurations = {
-        chu = home-manager.lib.homeManagerConfiguration {
-          inherit pkgs;
-          modules = [ ./home.nix ];
-        };
-      };
-    };
+      lib = import ./lib args;
+    in with builtins;
+    with lib;
+    mkFlake inputs {
+      systems = [ "x86_64-linux" ];
+      inherit lib;
 
+      hosts = mapHosts ./hosts;
+      modules.default = import ./.;
+
+      apps.install = mkApp ./install.zsh;
+      devShells.default = import ./shell.nix;
+      checks = mapModules ./test import;
+      overlays = mapModules ./overlays import;
+      packages = mapModules ./packages import;
+      # templates = import ./templates args;
+    };
 }
 #+end_src
 
@@ -374,9 +398,18 @@ nixos-install \
   };
 
   programs = {
-    # Let Home Manager install and manage itself.
     home-manager.enable = true;
     zsh.enable = true;
+    librewolf = {
+      enable = true;
+      settings = {
+        "webgl.disabled" = false;
+        "privacy.resistFingerprinting" = false;
+        "privacy.clearOnShutdown.history" = false;
+        "privacy.clearOnShutdown.cookies" = false;
+        "network.cookie.lifetimePolicy" = 0;
+      };
+    };
     # Emacs
     emacs = { enable = true; };
 
