--- a/README.org
+++ b/README.org
@@ -437,7 +437,9 @@ nixos-install \
 #+end_src
 
 * TODO hosts (profiles)
+
 ** TODO chunix
+
 #+begin_src nix :tangle ./hosts/chunix/default.nix :mkdirp yes
 { lib, ... };
 
@@ -477,8 +479,8 @@ with bultins;
 
 let
   myShellAliases = {
-    supdate = "sudo nixos-rebuild switch --flake ~/.dotfiles";
-    hupdate = "home-manager switch --flake ~/.dotfiles";
+    supdate = "sudo nixos-rebuild switch --flake ~/.config/dotfiles";
+    hupdate = "home-manager switch --flake ~/.config/dotfiles";
     update = "supdate && hupdate";
 
     cp = "cp -iv";
