move install.zsh

--- a/README.org
+++ b/README.org
@@ -71,6 +71,13 @@ dotfiles/install.zsh \
 
 ** the installer
 
+See [[0f689c0a-5481-4709-9486-fa5ff2147daa][install.zsh]].
+
+* install.zsh
+:PROPERTIES:
+:ID:       0f689c0a-5481-4709-9486-fa5ff2147daa
+:END:
+
 Deploy and install this nixos system.
 
 #+name: installer
@@ -118,6 +125,71 @@ nixos-install \
 [{bin/*,**/*.zsh,.zshrc,.zshenv}]
 indent_style = space
 indent_size = 2
+#+end_src
+
+* default.nix
+* flake.nix
+
+#+begin_src nix :tangle ./flake.nix
+{
+  description = "chunixOS";
+
+  inputs = {
+
+    nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
+    nixpkgs-unstable.url = "nixpkgs/nixos-unstable";
+
+    home-manager = {
+      url = "github:nix-community/home-manager/master";
+      inputs.nixpkgs.follows = "nixpkgs";
+    };
+
+    # TODO: Secrets mgmt.
+    # agenix = {
+    #   url = "github:ryantm/agenix";
+    #   inputs.nixpkgs.follows = "nixpkgs";
+    # };
+
+    # TODO: Declarative partitions
+    # disko.url = "github:nix-community/disko";
+    # disko.inputs.nixpkgs.follows = "nixpkgs";
+
+    emacs-overlay = {
+      url = "github:nix-community/emacs-overlay";
+      inputs = {
+        nixpkgs.follows = "nixpkgs-unstable";
+        nixpkgs-stable.follows = "nixpkgs";
+      };
+    };
+    nixos-hardware.url = "github:nixos/nixos-hardware";
+  };
+
+# Pass flake inputs to external config files:
+  outputs = inputs@{ self, nixpkgs, nixos-hardware, ... }:
+    let
+      args = {
+        inherit self;
+        inherit (nixpkgs) lib;
+        pkgs = import nixpkgs { };
+      };
+      lib = import ./lib args;
+    in with builtins;
+    with lib;
+    mkFlake inputs {
+      systems = [ "x86_64-linux" ];
+      inherit lib;
+
+      hosts = mapHosts ./hosts;
+      modules.default = import ./.;
+
+      apps.install = mkApp ./install.zsh;
+      # devShells.default = import ./shell.nix;
+      # checks = mapModules ./test import;
+      # overlays = mapModules ./overlays import;
+      # packages = mapModules ./packages import;
+      # templates = import ./templates args;
+    };
+}
 #+end_src
 
 * configuration
@@ -250,70 +322,6 @@ indent_size = 2
 }
 #+end_src
 
-* flake.nix
-
-#+begin_src nix :tangle ./flake.nix
-{
-  description = "chunixOS";
-
-  inputs = {
-
-    nixpkgs.url = "github:nixos/nixpkgs/nixos-24.05";
-    nixpkgs-unstable.url = "nixpkgs/nixos-unstable";
-
-    home-manager = {
-      url = "github:nix-community/home-manager/master";
-      inputs.nixpkgs.follows = "nixpkgs";
-    };
-
-    # TODO: Secrets mgmt.
-    # agenix = {
-    #   url = "github:ryantm/agenix";
-    #   inputs.nixpkgs.follows = "nixpkgs";
-    # };
-
-    # TODO: Declarative partitions
-    # disko.url = "github:nix-community/disko";
-    # disko.inputs.nixpkgs.follows = "nixpkgs";
-
-    emacs-overlay = {
-      url = "github:nix-community/emacs-overlay";
-      inputs = {
-        nixpkgs.follows = "nixpkgs-unstable";
-        nixpkgs-stable.follows = "nixpkgs";
-      };
-    };
-    nixos-hardware.url = "github:nixos/nixos-hardware";
-  };
-
-# Pass flake inputs to external config files:
-  outputs = inputs@{ self, nixpkgs, nixos-hardware, ... }:
-    let
-      args = {
-        inherit self;
-        inherit (nixpkgs) lib;
-        pkgs = import nixpkgs { };
-      };
-      lib = import ./lib args;
-    in with builtins;
-    with lib;
-    mkFlake inputs {
-      systems = [ "x86_64-linux" ];
-      inherit lib;
-
-      hosts = mapHosts ./hosts;
-      modules.default = import ./.;
-
-      apps.install = mkApp ./install.zsh;
-      # devShells.default = import ./shell.nix;
-      # checks = mapModules ./test import;
-      # overlays = mapModules ./overlays import;
-      # packages = mapModules ./packages import;
-      # templates = import ./templates args;
-    };
-}
-#+end_src
-
 * home.nix
 
 #+begin_src nix :tangle ./home.nix
@@ -425,9 +433,9 @@ indent_size = 2
 }
 #+end_src
 
-* TODO hosts (profiles)
+* hosts
 
-** TODO chunix
+** chunix
 
 #+begin_src nix :tangle ./hosts/chunix/default.nix :mkdirp yes
 { lib, ... };
