move stuff around in readme

--- a/README.org
+++ b/README.org
@@ -71,53 +71,7 @@ dotfiles/install.zsh \
 
 ** the installer
 
-See [[0f689c0a-5481-4709-9486-fa5ff2147daa][install.zsh]].
-
-* install.zsh
-:PROPERTIES:
-:ID:       0f689c0a-5481-4709-9486-fa5ff2147daa
-:END:
-
-Deploy and install this nixos system.
-
-#+name: installer
-#+begin_src sh :shebang #!/usr/bin/env zsh :tangle ./install.zsh :noeval t
-zparseopts -E -F -D -- -flake=flake \
-                       -user=user \
-                       -host=host \
-                       -dest=dest \
-                       -root=root || exit 1
-
-local root="${root[2]:-/mnt}"
-local flake="${flake[2]:-$root/etc/dotfiles}"
-local host="${host[2]:-$HOST}"
-local user="${user[2]:-chu}"
-local dest="${dest[2]:-$root/home/$user/.config/dotfiles}"
-
-if [[ "$USER" == nixos ]]; then
-  >&2 echo "Error: not in the nixos installer"
-  exit 1
-elif [[ -z "$host" ]]; then
-  >&2 echo "Error: no --host set"
-  exit 2
-fi
-
-set -e
-if [[ ! -d "$flake" ]]; then
-  local url=https://github.com/chumutt/dogfiles
-  [[ "$user" == chu ]] && url="git@github.com:chumutt/dogfiles.git"
-  rm -rf "$flake"
-  git clone --recursive "$url" "$flake"
-  chown "$user:users" -R "$flake"
-fi
-
-# export HEYENV="{\"user\":\"$user\",\"host\":\"$host\",\"path\":\"${flake#$root}\",\"theme\":\"$THEME\"}"
-nixos-install \
-    --impure \
-    --show-trace \
-    --root "$root" \
-    --flake "${flake}#${host}"
-#+end_src
+See [[id:0f689c0a-5481-4709-9486-fa5ff2147daa][install.zsh]].
 
 * .editorconfig
 
@@ -190,6 +144,52 @@ indent_size = 2
       # templates = import ./templates args;
     };
 }
+#+end_src
+
+* install.zsh
+:PROPERTIES:
+:ID:       0f689c0a-5481-4709-9486-fa5ff2147daa
+:END:
+
+Deploy and install this nixos system.
+
+#+name: installer
+#+begin_src sh :shebang #!/usr/bin/env zsh :tangle ./install.zsh :noeval t
+zparseopts -E -F -D -- -flake=flake \
+                       -user=user \
+                       -host=host \
+                       -dest=dest \
+                       -root=root || exit 1
+
+local root="${root[2]:-/mnt}"
+local flake="${flake[2]:-$root/etc/dotfiles}"
+local host="${host[2]:-$HOST}"
+local user="${user[2]:-chu}"
+local dest="${dest[2]:-$root/home/$user/.config/dotfiles}"
+
+if [[ "$USER" == nixos ]]; then
+  >&2 echo "Error: not in the nixos installer"
+  exit 1
+elif [[ -z "$host" ]]; then
+  >&2 echo "Error: no --host set"
+  exit 2
+fi
+
+set -e
+if [[ ! -d "$flake" ]]; then
+  local url=https://github.com/chumutt/dogfiles
+  [[ "$user" == chu ]] && url="git@github.com:chumutt/dogfiles.git"
+  rm -rf "$flake"
+  git clone --recursive "$url" "$flake"
+  chown "$user:users" -R "$flake"
+fi
+
+# export HEYENV="{\"user\":\"$user\",\"host\":\"$host\",\"path\":\"${flake#$root}\",\"theme\":\"$THEME\"}"
+nixos-install \
+    --impure \
+    --show-trace \
+    --root "$root" \
+    --flake "${flake}#${host}"
 #+end_src
 
 * configuration
