--- a/README.org
+++ b/README.org
@@ -1,5 +1,12 @@
 #+title: chunixos
-* TODO doom install script
+* TODO doom install script with my dotfiles
 * TODO doom path added to path
 * TODO roswell install script
 * TODO wallpaper
+* TODO opentabletdriver
+* TODO ardour / plugins / music
+* TODO zfs server / nfs connections
+* TODO agenix
+* TODO blender
+* TODO hard drives / fstab
+* TODO impermanence
